Fix #315: Add MenuSelectionTask
- new kind of manual task for interaction with the operator via menu selection
- add example of the Menu Selection Task to SuperBrewer 3000 example

Signed-off-by: Christian W. Damus <give.a.damus@gmail.com>